--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
+  /* display: flex;
+  justify-content: space-between; */
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
